--- a/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
@@ -347,6 +347,7 @@
     <Compile Include="Infrastructure\TimeZoneResolver\TimeZoneResolver.cs" />
     <Compile Include="Response\Questionnaire\OptionNote.cs" />
     <Compile Include="Services\Authentication\FederatedAuthenticationService.cs" />
+    <Compile Include="Services\CaseSolutions\BaseCaseSolutionService.cs" />
     <Compile Include="Services\Cache\TranslateCacheService.cs" />
     <Compile Include="Services\Cache\ICacheService.cs" />
     <Compile Include="Services\Concrete\Changes\BaseChangesService.cs" />
@@ -430,7 +431,7 @@
     <Compile Include="Services\CaseSearchService.cs" />
     <Compile Include="Services\CaseService.cs" />
     <Compile Include="Services\CaseSettingsService.cs" />
-    <Compile Include="Services\CaseSolutionService.cs" />
+    <Compile Include="Services\CaseSolutions\CaseSolutionService.cs" />
     <Compile Include="Services\CheckListsService.cs" />
     <Compile Include="Services\Concrete\CaseInvoiceSettingsService.cs" />
     <Compile Include="Services\Concrete\CaseSolutionSettingService.cs" />
