--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/log4net.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/log4net.config
@@ -28,8 +28,28 @@
       <conversionPattern value="%newline%property{log4net:HostName} :: %level :: %date :: %logger%newline%message%newline" />
     </layout>
   </appender>-->
+  <appender name="ClientLogFileAppender" type="log4net.Appender.RollingFileAppender">
+    <param name="File" value="Logs/Client/log_" />
+    <param name="RollingStyle" value="Date" />
+    <param name="DatePattern" value="yyyy.MM.dd.\lo\g" />
+    <param name="StaticLogFileName" value="false" />
+    <param name="AppendToFile" value="true" />
+    <layout type="log4net.Layout.PatternLayout">
+      <param name="ConversionPattern" value="%m%n" />
+      <!--%date [%3thread] %-5level %property{log4net:HostName} [%property{Revision}] %logger %message%n-->
+    </layout>
+  </appender>
+  <logger name="ClientLog" additivity="false">
+    <level value="ALL" />
+    <appender-ref ref="ClientLogFileAppender" />
+  </logger>
   <logger name="AppErrorLog">
     <level value="ALL" />
     <appender-ref ref="RollingLogFileAppender" />
   </logger>
+  <root>
+    <appender-ref ref="RollingLogFileAppender">
+      <level value="WARN" />
+    </appender-ref>
+  </root>
 </log4net>
