--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/packages.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac.Owin" version="4.2.0" targetFramework="net472" />
   <package id="Autofac.WebApi2" version="4.2.0" targetFramework="net472" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net472" />
+  <package id="AutoMapper" version="7.0.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net472" />
@@ -25,5 +26,6 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
   <package id="NodaTime" version="2.4.0" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
 </packages>
