--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -32,6 +32,7 @@
         "ngx-moment": "^3.1.0",
         "rxjs": "^6.2.2",
         "rxjs-compat": "^6.3.3",
+        "tslint-angular": "^1.1.2",
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
