--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -1,6 +1,6 @@
 {
     "name": "web-mobile",
-    "version": "0.1.5",
+    "version": "0.1.7",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
@@ -36,6 +36,7 @@
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
+        "@angular-builders/custom-webpack": "^2.5.4",
         "@angular-devkit/build-angular": "^0.7.3",
         "@angular/cli": "^6.1.4",
         "@angular/compiler-cli": "^6.1.4",
@@ -43,8 +44,8 @@
         "@types/file-saver": "^1.3.1",
         "@types/jasmine": "^2.8.8",
         "@types/jasminewd2": "~2.0.3",
-        "@types/node": "^10.11.6",
         "@types/moment-timezone": "^0.5.9",
+        "@types/node": "^10.11.6",
         "codelyzer": "^4.4.4",
         "jasmine-core": "^3.2.1",
         "jasmine-spec-reporter": "^4.2.1",
