--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/tsconfig.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/tsconfig.json
@@ -18,12 +18,8 @@
       "dom"
     ],
     "paths": {
-      "moment": [
-        "node_modules/moment/min/moment.min.js"
-      ],
       "moment-timezone": [
-        "node_modules/moment-timezone/moment-timezone-utils.js",
-        "node_modules/moment-timezone/builds/moment-timezone.min.js"
+        "node_modules/moment-timezone/moment-timezone-utils.js"
       ]
     }
   }
