Fixed Regarding section visibility

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/angular.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/angular.json
@@ -19,7 +19,10 @@
           "options": {
             "customWebpackConfig": {
               "path": "./extra-webpack.config.js",
-              "replaceDuplicatePlugins": true
+              "replaceDuplicatePlugins": true,
+              "mergeStrategies": {
+                "externals": "prepend"
+              }
             },
             "outputPath": "wwwroot/build",
             "index": "src/index.html",
