--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -55,6 +55,7 @@
         "karma-coverage-istanbul-reporter": "~2.0.0",
         "karma-jasmine": "^1.1.2",
         "karma-jasmine-html-reporter": "^1.3.0",
+        "moment-locales-webpack-plugin": "^1.0.7",
         "protractor": "^5.4.0",
         "ts-node": "~7.0.1",
         "tslint": "^5.11.0",
