--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/packages.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/packages.config
@@ -26,6 +26,8 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
   <package id="NodaTime" version="2.4.0" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net472" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
 </packages>
