--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
@@ -166,7 +166,6 @@
     <Compile Include="Controllers\CaseSectionsController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="App_Start\WebApiConfig.DI.cs" />
-    <Compile Include="App_Start\Ninject.Web.Common.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.Logging.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -194,36 +193,37 @@
     <Compile Include="Infrastructure\ClientLogger\ClientLogMessageFormatter.cs" />
     <Compile Include="Infrastructure\ClientLogger\Enums\ClientLogLevel.cs" />
     <Compile Include="Infrastructure\ClientLogger\ClientLogger.cs" />
-    <Compile Include="Infrastructure\Config\DependencyInjection\MapperModule.cs" />
-    <Compile Include="Infrastructure\Config\Filters\CheckUserCasePermissionsAttribute.cs" />
-    <Compile Include="Infrastructure\Config\Filters\UserCasePermissionsFilter.cs" />
+    <Compile Include="App_Start\DependencyInjection\MapperModule.cs" />
+    <Compile Include="Infrastructure\Filters\CheckUserCasePermissionsAttribute.cs" />
+    <Compile Include="Infrastructure\Filters\NoCamelCasingFilter.cs" />
+    <Compile Include="Infrastructure\Filters\UserCasePermissionsFilter.cs" />
     <Compile Include="Infrastructure\BaseApiController.cs" />
     <Compile Include="Infrastructure\Cache\WebCacheService.cs" />
     <Compile Include="Infrastructure\Config\ApplicationConfiguration.cs" />
-    <Compile Include="Infrastructure\Config\Authentication\AccessTokenProvider.cs" />
-    <Compile Include="Infrastructure\Config\Authentication\ClaimsAccessHelper.cs" />
-    <Compile Include="Infrastructure\Config\Authentication\CustomClaimTypes.cs" />
-    <Compile Include="Infrastructure\Config\Authentication\RefreshTokenProvider.cs" />
+    <Compile Include="Infrastructure\Authentication\AccessTokenProvider.cs" />
+    <Compile Include="Infrastructure\Authentication\ClaimsAccessHelper.cs" />
+    <Compile Include="Infrastructure\Authentication\CustomClaimTypes.cs" />
+    <Compile Include="Infrastructure\Authentication\RefreshTokenProvider.cs" />
     <Compile Include="Infrastructure\Config\ConfigApi.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
-    <Compile Include="Infrastructure\Config\DependencyInjection\AuthorizationModule.cs" />
-    <Compile Include="Infrastructure\Config\DependencyInjection\ChangesMobule.cs" />
-    <Compile Include="Infrastructure\Config\DependencyInjection\CommonModule.cs" />
-    <Compile Include="Infrastructure\Config\DependencyInjection\LoggerModule.cs" />
-    <Compile Include="Infrastructure\Config\DependencyInjection\MappersModule.cs" />
-    <Compile Include="Infrastructure\Config\DependencyInjection\RepositoriesModule.cs" />
-    <Compile Include="Infrastructure\Config\DependencyInjection\ServicesModule.cs" />
-    <Compile Include="Infrastructure\Config\DependencyInjection\WorkContextModule.cs" />
-    <Compile Include="Infrastructure\Config\Filters\ApiExceptionFilter.cs" />
-    <Compile Include="Infrastructure\Config\Filters\AuthorizationFilterBase.cs" />
-    <Compile Include="Infrastructure\Config\Filters\CustomerAccessAuthorizationFilter.cs" />
-    <Compile Include="Infrastructure\Config\Filters\ModelValidationApiActionFilter.cs" />
+    <Compile Include="App_Start\DependencyInjection\AuthorizationModule.cs" />
+    <Compile Include="App_Start\DependencyInjection\ChangesModule.cs" />
+    <Compile Include="App_Start\DependencyInjection\CommonModule.cs" />
+    <Compile Include="App_Start\DependencyInjection\LoggerModule.cs" />
+    <Compile Include="App_Start\DependencyInjection\MappersModule.cs" />
+    <Compile Include="App_Start\DependencyInjection\RepositoriesModule.cs" />
+    <Compile Include="App_Start\DependencyInjection\ServicesModule.cs" />
+    <Compile Include="App_Start\DependencyInjection\WorkContextModule.cs" />
+    <Compile Include="Infrastructure\Filters\ApiExceptionFilter.cs" />
+    <Compile Include="Infrastructure\Filters\AuthorizationFilterBase.cs" />
+    <Compile Include="Infrastructure\Filters\CustomerAccessAuthorizationFilter.cs" />
+    <Compile Include="Infrastructure\Filters\ModelValidationApiActionFilter.cs" />
     <Compile Include="..\CommonAssembly\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Infrastructure\Config\Mapper\MappingConfiguration.cs" />
-    <Compile Include="Infrastructure\Config\Mapper\Profiles\ModelToEntitiesMappingProfile.cs" />
-    <Compile Include="Infrastructure\Config\Owin\RequestMiddleware.cs" />
+    <Compile Include="Infrastructure\Mapper\MappingConfiguration.cs" />
+    <Compile Include="Infrastructure\Mapper\Profiles\ModelToEntitiesMappingProfile.cs" />
+    <Compile Include="Infrastructure\Owin\RequestMiddleware.cs" />
     <Compile Include="Infrastructure\Contexts\CacheContext.cs" />
     <Compile Include="Infrastructure\Contexts\UserContext.cs" />
     <Compile Include="Infrastructure\Contexts\WorkContext.cs" />
