--- a/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
@@ -321,6 +321,7 @@
     <Compile Include="DisplayValues\UserNameDisplayValue.cs" />
     <Compile Include="Enums\ContractStatuses.cs" />
     <Compile Include="Enums\ExtendedCasePathTokens.cs" />
+    <Compile Include="Enums\TextTypes.cs" />
     <Compile Include="Exceptions\BusinessLogicException.cs" />
     <Compile Include="Exceptions\ElementaryValidationRulesException.cs" />
     <Compile Include="Exceptions\MarksNotFoundException.cs" />
