#65249 Files - open in new tab

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/.vscode/tasks.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/.vscode/tasks.json
@@ -8,7 +8,11 @@
             "script": "build",
             "problemMatcher": [
                 "$tsc"
-            ]
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
