--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <!-- Dev --> <!-- ignore 20181029 1542 --> 
+    <!-- Dev --> <!-- testing template generation, ignore --> 
     <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=#{DatabaseServer};Initial Catalog=#{DatabaseName};User Id=#{DatabaseUser};Password=#{DatabasePassword};" providerName="System.Data.OleDb"/>
     <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=#{DatabaseServer};Initial Catalog=#{DatabaseName};User Id=#{DatabaseUser};Password=#{DatabasePassword};MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient"/>
     <add name="HelpdeskIndexingService" connectionString="Provider=MSIDXS;"/>
@@ -31,7 +31,10 @@
     <add key="log4net.Internal.Debug" value="true"/>
     <add key="SmtpServer" value="smtp.datahalland.se"/>
     <add key="SmtpPort" value="25"/>
-    <add key="LoginMode" value="Application"/>
+    #{if AuthenticationMode="Application"}<add key="LoginMode" value="Application"/>#{/if}
+	#{else if AuthenticationMode="windows"}<add key="LoginMode" value="Windows"/>#{/if}
+	#{else if AuthenticationMode="sso"}<add key="LoginMode" value="SSO"/>#{/if}
+	#{else if AuthenticationMode="anonymous"}<add key="LoginMode" value="Anonymous"/>#{/if}
   </appSettings>
   <system.web.extensions>
     <scripting>
@@ -54,9 +57,15 @@
     </pages>
     <!-- 50 mb in kilobytes -->
     <httpRuntime maxRequestLength="5242880" targetFramework="4.5"/>
+	 #{if AuthenticationMode="Application"}
     <authentication mode="Forms">
       <forms loginUrl="~/Login/Login" timeout="2880" defaultUrl="~/"/>
     </authentication>
+	#{/if}
+	#{if AuthenticationMode="Windows"}
+    <authentication mode="Windows">
+    </authentication>
+	#{/if}
 
     <identity impersonate="false"/>
     <httpHandlers>
