Added PWA mode support (manifest to handle open mode from schortcut) renamed icons

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -21,7 +21,9 @@
         "@angular/platform-browser": "^6.1.4",
         "@angular/platform-browser-dynamic": "^6.1.4",
         "@angular/platform-server": "^6.1.4",
+        "@angular/pwa": "^0.10.4",
         "@angular/router": "^6.1.4",
+        "@angular/service-worker": "^6.1.4",
         "@mobiscroll/angular": "file:./src/lib/mobiscroll-package/mobiscroll-angular-4.4.1.tgz",
         "@ngx-translate/core": "^10.0.2",
         "@ngx-translate/http-loader": "^3.0.1",
