--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/angular.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/angular.json
@@ -32,6 +32,7 @@
             "assets": [
               "src/favicon.ico",
               "src/web.config",
+              "src/manifest.json",
               {
                 "glob": "**/*",
                 "input": "src/content/icons",
@@ -67,7 +68,8 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true
+              "buildOptimizer": true,
+              "serviceWorker": true
             },
             "dhdev": {
               "fileReplacements": [
@@ -118,7 +120,8 @@
             "scripts": [],
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.json"
             ]
           }
         },
