--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/manifest.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "Helpdesk",
   "theme_color": "#fff",
   "background_color": "#fff",
-  "display": "minimal-ui",
+  "display": "browser",
   "scope": "/",
   "start_url": "/",
   "icons": [
