--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/packages.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/packages.config
@@ -22,6 +22,7 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.SlowCheetah" version="3.1.66" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
   <package id="NodaTime" version="2.4.0" targetFramework="net472" />
