Perfomance fix - made web api logger async

--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/log4net.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/log4net.config
@@ -47,8 +47,13 @@
     <level value="ALL" />
     <appender-ref ref="RollingLogFileAppender" />
   </logger>
+  <appender name="asyncForwarder" type="Log4Net.Async.AsyncForwardingAppender,Log4Net.Async">
+    <appender-ref ref="RollingLogFileAppender" >
+      <level value="WARN" />
+    </appender-ref>
+  </appender>
   <root>
-    <appender-ref ref="RollingLogFileAppender">
+    <appender-ref ref="asyncForwarder">
       <level value="WARN" />
     </appender-ref>
   </root>
