--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/packages.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/packages.config
@@ -7,6 +7,7 @@
   <package id="AutoMapper" version="7.0.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
+  <package id="Log4Net.Async" version="2.0.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net472" />
