--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/log4net.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/log4net.config
@@ -29,7 +29,26 @@
     </layout>
   </appender>-->
   <appender name="ClientLogFileAppender" type="log4net.Appender.RollingFileAppender">
-    <param name="File" value="Logs/Client/log_" />
+    <filter type="log4net.Filter.LevelRangeFilter">
+      <levelMin value="WARN" />
+      <levelMax value="FATAL" />
+    </filter>
+    <param name="File" value="Logs/Client/log_error_" />
+    <param name="RollingStyle" value="Date" />
+    <param name="DatePattern" value="yyyy.MM.dd.\lo\g" />
+    <param name="StaticLogFileName" value="false" />
+    <param name="AppendToFile" value="true" />
+    <layout type="log4net.Layout.PatternLayout">
+      <param name="ConversionPattern" value="%m%n" />
+      <!--%date [%3thread] %-5level %property{log4net:HostName} [%property{Revision}] %logger %message%n-->
+    </layout>
+  </appender>
+  <appender name="ClientInfoLogFileAppender" type="log4net.Appender.RollingFileAppender">
+    <filter type="log4net.Filter.LevelRangeFilter">
+      <levelMin value="DEBUG" />
+      <levelMax value="INFO" />
+    </filter>
+    <param name="File" value="Logs/Client/log_info_" />
     <param name="RollingStyle" value="Date" />
     <param name="DatePattern" value="yyyy.MM.dd.\lo\g" />
     <param name="StaticLogFileName" value="false" />
@@ -42,6 +61,7 @@
   <logger name="ClientLog" additivity="false">
     <level value="ALL" />
     <appender-ref ref="ClientLogFileAppender" />
+    <appender-ref ref="ClientInfoLogFileAppender" />
   </logger>
   <logger name="AppErrorLog">
     <level value="ALL" />
