Updated version. Updated configurations settings.

--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
@@ -259,6 +259,7 @@
     <Content Include="log4net.config" />
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\DhDev - Local File System.pubxml" />
+    <None Include="Properties\PublishProfiles\Release- local folder.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
