--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.DhDev.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.DhDev.config
@@ -14,6 +14,15 @@
          xdt:Transform="SetAttributes" 
          xdt:Locator="Match(name)"/>
   </connectionStrings>
+
+
+  <appSettings >
+    <add key="log4net.Internal.Debug" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="dh_filesDirectory" value="C:\DHHelpdeskUTV_Documents" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="DefaultCulture" value="sv" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SmtpServer" value="localhost" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SmtpPort" value="25" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+  </appSettings>
   
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
