--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config.template
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config.template
@@ -12,7 +12,7 @@
   
   <appSettings>
     <add key="log4net.Internal.Debug" value="false" />
-    <add key="dh_filesDirectory" value="C:\DHHelpdeskUTV_Documents" />
+    <add key="dh_filesDirectory" value="#{FilesDirectory}" />
     <add key="DefaultCulture" value="sv" />
     <add key="SmtpServer" value="localhost" />
     <add key="SmtpPort" value="25" />
@@ -20,7 +20,7 @@
   
   <connectionStrings>
     <!-- Dev -->
-    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=(local);Initial Catalog=DH_Support;User Id=helpdesk;Password=;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=#{DatabaseServer};Initial Catalog=#{DatabaseName};User Id=#{DatabaseUser};Password=#{DatabasePassword};MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <system.web>
