--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Models\CaseDocument\CaseDocumentTextConditionIdentifierModel.cs" />
     <Compile Include="Models\CaseDocument\DocumentConditionOverview.cs" />
     <Compile Include="Models\Case\CaseFileContent.cs" />
+    <Compile Include="Models\Case\CaseLockSettings.cs" />
     <Compile Include="Models\Case\CaseSectionInfo.cs" />
     <Compile Include="Models\Case\CaseSolutionConditionOverview.cs" />
     <Compile Include="Models\Case\CaseSolutionInfo.cs" />
