[FIX]#65095 - File upload from mobile devices - SelfService; AccessMode enum;

--- a/dhHelpdeskNG/DH.Helpdesk.Web.Common/DH.Helpdesk.Web.Common.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.Web.Common/DH.Helpdesk.Web.Common.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Converters\TimeZoneConverter.cs" />
     <Compile Include="Converters\TimeZoneToMomentConverter.cs" />
+    <Compile Include="Enums\Case\AccessMode.cs" />
     <Compile Include="Enums\Case\RemainingTimes.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Models\CaseSearch\SearchModel.cs" />
