--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ dhHelpdeskNG/dhHelpdesk_NG.Web/ExtendedCase/**
 dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/ExtendedCase/**
 dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/ExtendedCaseApi/**
 dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Logs/
+dhHelpdeskNG/DH.Helpdesk.WebApi/Logs
 dhHelpdeskNG/.vs/
 dhHelpdeskMobile/.vs/
 **/node_modules/*
