--- a/dhHelpdeskNG/DH.Helpdesk.Models/DH.Helpdesk.Models.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.Models/DH.Helpdesk.Models.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Base\BaseInputModel.cs" />
     <Compile Include="CasesOverview\SearchOverviewFilterInputModel.cs" />
+    <Compile Include="Case\CaseEditInputModel.cs" />
     <Compile Include="Case\CaseEditOutputModel.cs" />
     <Compile Include="Case\CaseLockModel.cs" />
     <Compile Include="Case\Field\BaseCaseField.cs" />
