--- a/dhHelpdeskNG/DH.Helpdesk.Web.Common/DH.Helpdesk.Web.Common.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.Web.Common/DH.Helpdesk.Web.Common.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\Case\CaseFieldsNamesApi.cs" />
     <Compile Include="Converters\TimeZoneConverter.cs" />
     <Compile Include="Converters\TimeZoneToMomentConverter.cs" />
     <Compile Include="Enums\Case\AccessMode.cs" />
