--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.Template_Debug.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.Template_Debug.config
@@ -13,6 +13,7 @@
     xdt:Transform="Replace">
     <add key="log4net.Internal.Debug" value="false" />
     <add key="dh_filesDirectory" value="#{FilesDirectory}" />
+    <add key="dh_selfserviceaddress" value="#{SelfserviceAddress}"  xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="DefaultCulture" value="sv" />
     <add key="SmtpServer" value="smtp.datahalland.se" />
     <add key="SmtpPort" value="25" />
