--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.Release.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.Release.config
@@ -14,6 +14,7 @@
   <appSettings >
     <add key="log4net.Internal.Debug" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="dh_filesDirectory" value="documents_path" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="dh_selfserviceaddress" value="selfservice_url"  xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="DefaultCulture" value="sv" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="SmtpServer" value="localhost" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="SmtpPort" value="25" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
