--- a/dhHelpdeskNG/dhHelpdesk_NG.Data/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Data/packages.config
@@ -4,4 +4,5 @@
   <package id="DbExtensions" version="5.1.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="PostSharp" version="4.0.38" targetFramework="net452" />
+  <package id="Z.EntityFramework.Plus.EF6" version="1.8.16" targetFramework="net452" />
 </packages>
